tests/ui/const-generics/vec-macro-in-static-array.stderr
error[E0308]: mismatched types
  --> $DIR/vec-macro-in-static-array.rs:5:26
   |
LL | static VEC: [u32; 256] = vec![];
   |             ----------   ^^^^^^ expected `[u32; 256]`, found `Vec<_>`
   |             |
   |             expected because of the type of the static
   |
   = note: expected array `[u32; 256]`
             found struct `Vec<_>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
